feat(#1) : feign 통신 코드 추가